// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly multiple selections 1`] = `
<div
  className="element-title"
>
  Multiple Objects
</div>
`;

exports[`should render correctly no selected element 1`] = `""`;

exports[`should render correctly single selection data-textpath-g 1`] = `
<div
  className="element-title"
>
  Layer 1 &gt; Text on Path
</div>
`;

exports[`should render correctly single selection dxf 1`] = `
<div
  className="element-title"
>
  Layer 1 &gt; DXF Object
</div>
`;

exports[`should render correctly single selection imported object 1`] = `
<div
  className="element-title"
>
  Layer 1 &gt; Imported Object
</div>
`;

exports[`should render correctly single selection no layer title given 1`] = `
<div
  className="element-title"
>
   &gt; Imported Object
</div>
`;

exports[`should render correctly single selection not use 1`] = `
<div
  className="element-title"
>
  Layer 1 &gt; Rectangle
</div>
`;

exports[`should render correctly single selection svg 1`] = `
<div
  className="element-title"
>
  Layer 1 &gt; SVG Object
</div>
`;
